// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiLogin /> MultiLogin match baseline snapshot 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <styled.ul
    plainList={true}
  >
    <styled.li
      isActive={false}
      onClick={[Function]}
    >
      Register
    </styled.li>
    <styled.li
      isActive={true}
      onClick={[Function]}
    >
      Login
    </styled.li>
    <styled.li
      isActive={false}
      onClick={[Function]}
    >
      Reset
    </styled.li>
  </styled.ul>
  <styled.span
    position={false}
  />
  <styled.label
    for="user"
  >
    Enter 
    Username or Email
  </styled.label>
  <Input
    innerRef={[Function]}
    isHidden={false}
    name="user"
    placeholder="Username or Email"
    type="text"
  />
  <styled.label
    for="email"
  >
    Enter email
  </styled.label>
  <Input
    innerRef={[Function]}
    isHidden={true}
    name="email"
    placeholder="Email"
    type="email"
  />
  <styled.label
    for="password"
  >
    Enter account password
  </styled.label>
  <Input
    isHidden={false}
    name="password"
    placeholder="Password"
    type="password"
  />
  <styled.label
    for="confirmPassword"
  >
    Confirm account password
  </styled.label>
  <Input
    isHidden={true}
    name="confirmPassword"
    placeholder="Confirm Password"
    type="password"
  />
  <styled.div
    isHidden={true}
  >
    <styled.label
      for="apiKey"
    >
      Enter WaniKani API key
    </styled.label>
    <Input
      isHidden={true}
      name="apiKey"
      placeholder="WaniKani API key"
      type="text"
    />
    <Styled(IconLink)
      color="black"
      external={true}
      href="https://www.wanikani.com/settings/account"
      isHidden={true}
      name="HELP"
      title="Get WK API key"
    />
  </styled.div>
  <styled.button
    type="submit"
  >
    行こう
  </styled.button>
</styled.form>
`;

exports[`<MultiLogin /> MultiLogin.Form should match snapshot 1`] = `
<form
  className="sc-bZQynM CwoxM"
/>
`;

exports[`<MultiLogin /> MultiLogin.Input should match snapshot 1`] = `
<input
  aria-hidden="false"
  autocapitalize="off"
  autocomplete="on"
  autocorrect="off"
  class="sc-iwsKbI cECSfX"
  id="user"
  name="user"
  placeholder="Username or Email"
  spellcheck="false"
  type="text"
/>
`;

exports[`<MultiLogin /> MultiLogin.Input should match snapshot 2`] = `
<input
  aria-hidden="true"
  autocapitalize="off"
  autocomplete="on"
  autocorrect="off"
  class="sc-iwsKbI cECSfX"
  disabled=""
  id="user"
  name="user"
  placeholder="Username or Email"
  spellcheck="false"
  type="text"
/>
`;

exports[`<MultiLogin /> MultiLogin.Label should match snapshot 1`] = `
<label
  className="sc-dnqmqq dCrOQe"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectList should match snapshot 1`] = `
<ul
  className="sc-gzVnrw jTtfNu"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectListItem should match snapshot 1`] = `
<li
  className="sc-htoDjs fSFUjZ"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 1`] = `
<span
  className="sc-gZMcBi eQDjar"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 2`] = `
<span
  className="sc-gZMcBi cLrTXs"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 3`] = `
<span
  className="sc-gZMcBi hyuvun"
/>
`;

exports[`<MultiLogin /> MultiLogin.SubmitButton should match snapshot 1`] = `
<button
  className="sc-gqjmRU ljAVCz"
  type="submit"
>
  Submit
</button>
`;
